<resources>
    <string name="app_name">PhoneBookProject</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="registerButton">Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>
    <string name="enter_number">Enter number</string>
    <string name="enter_name">Enter name</string>
    <string name="add">Add</string>
</resources>